--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="clear_search">Clear search</string>
     <string name="want_to_delete_car">Are you sure you want to delete \"%1$s\" сar?</string>
     <string name="delete_car">Delete car</string>
+    <string name="replacement_date_not_provided">Replacement date not provided</string>
 </resources>
