--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -46,4 +46,5 @@
     <string name="clear_search">Очистить поиск</string>
     <string name="want_to_delete_car">Вы уверены, что хотите удалить \"%1$s\" машину?</string>
     <string name="delete_car">Удалить машину</string>
+    <string name="replacement_date_not_provided">Дата замены не указана</string>
 </resources>
