--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="select_car">Select a car</string>
     <string name="file_saved_success">File successfully saved!</string>
     <string name="file_save_error">Error saving the file.</string>
+    <string name="permission_required_to_save">Permission required to save</string>
 </resources>
