--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,4 +61,5 @@
     <string name="file_saved_success">Файл успешно сохранен!</string>
     <string name="file_save_error">Ошибка при сохранении файла.</string>
     <string name="permission_required_to_save">Требуется разрешение для сохранения</string>
+    <string name="vin_already_exists">VIN already exists</string>
 </resources>
